# python-optipuls

./: .gitignore  .gitlab-ci.yml  Dockerfile.optipuls  MANIFEST.in  README.md  box.xdmf  box_boundaries.h5  box_boundaries.xdmf  box_subdomains.h5  box_subdomains.xdmf  calculate.sh  coefficients.py  core.py  fenics_simulation.py  material.json  optimization.py  problem.py  pyproject.toml  run.py  setup.cfg  simulation.py  splines.py  test.py  visualization.py
docker/: Dockerfile.optipuls
docs/: conf.py  docker.rst  extras.rst  index.rst  install.rst  intro.rst  optimal-control-single-spot.rst  optimal-control-spot-welding.rst  quick-start.rst
examples/: optimization_zeroguess.py  simulation_linear_rampdown.py
extras/mesh/: mesh_convert.py  mesh_generate.py
materials/: EN_AW-6082_T6.json  dummy.json
mesh/: cylinder.h5  cylinder.xdmf  cylinder_boundaries.h5  cylinder_boundaries.xdmf  cylinder_subdomains.h5  cylinder_subdomains.xdmf  double.h5  double.xdmf  double_boundaries.h5  double_boundaries.xdmf  double_ng.h5  double_ng.xdmf  double_ng_boundaries.h5  double_ng_boundaries.xdmf  double_ng_subdomains.h5  double_ng_subdomains.xdmf  double_subdomains.h5  double_subdomains.xdmf  doublespot.h5  doublespot.xdmf  doublespot_boundaries.h5  doublespot_boundaries.xdmf  doublespot_subdomains.h5  doublespot_subdomains.xdmf
optipuls/: coefficients.py  core.py  material.py  mesh.py  optimization.py  problem.py  simulation.py  space.py  splines.py  time.py  uflspline.py  visualization.py
optipuls/utils/: io.py  (+4 more)
tests/: test_simulation.py  test_splines.py
utils/: io.py
(+14 files in other folders)
