[metadata]
name = optipuls
description = Numerical model for single spot pulsed laser beam welding.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/dstrelnikov/optipuls
author = Dmytro Strelnikov
author_email = dmytro.strelnikov@math.tu-chemnitz.de,
license = GPL v3
license_file = LICENSE.md
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: PDE Constrained Optimization
project_urls = 
    Documentation = https://github.com/dstrelnikov/optipuls
    Source = https://github.com/dstrelnikov/optipuls
keywords = optimization, laser, welding, FEM, FEniCS, PDE


[options]
packages = optipuls
platforms = any
include_package_data = True
install_requires = 
    numpy >= 1.13.1
    scipy >= 0.19.1
    matplotlib >= 3.1.2
    fenics == 2019.1.0
python_requires = >= 3.6
setup_requires =
    setuptools_scm
